--- a/docker/nginx/config/nginx.conf
+++ b/docker/nginx/config/nginx.conf
@@ -50,5 +50,6 @@ http {
 
 	# load configs
 	# include /etc/nginx/conf.d/*.conf;
+	include /etc/nginx/nginxconfig.io/maps.conf;
 	include /etc/nginx/sites-enabled/*;
 }
