--- a/docker/nginx/config/sites-enabled/default.conf
+++ b/docker/nginx/config/sites-enabled/default.conf
@@ -7,11 +7,11 @@ server {
 	root $base/public;
 
 	# security
-	include nginxconfig.io/security.conf;
+	include nginxconfig.io/server/security.conf;
 
 	# logging
-	access_log /var/log/nginx/localhost.access.log;
-	error_log /var/log/nginx/localhost.error.log warn;
+	access_log /var/log/nginx/localhost_fpm.access.log;
+	error_log /var/log/nginx/localhost_fpm.error.log warn;
 
 	# index.php
 	index index.php;
@@ -23,9 +23,9 @@ server {
 
 	# handle .php
 	location ~ \.php$ {
-		include nginxconfig.io/php_fastcgi.conf;
+		include nginxconfig.io/server/php_fastcgi.conf;
 	}
 
 	# additional config
-	include nginxconfig.io/general.conf;
+	include nginxconfig.io/server/general.conf;
 }
