feat: require vue3 + ts + inertia app and do some initial changes (require vuex)

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,1 +1,27 @@
-FPM_XDEBUG=false
+APP_XDEBUG=false
+APP_VITE_DEBUG=false
+APP_HTTP=8000
+APP_HTTPS=8433
+APP_VITE_DEBUG_PORT=5173
+APP_INERTIA_PORT=13714
+
+#ZOMBOID SERVER
+# Empty Strings are ignored or equivalent to false
+ZOMBOID_NO_STEAM=False
+ZOMBOID_CACHE_DIR=
+ZOMBOID_MOD_FOLDERS=workshop,steam,mods
+ZOMBOID_DEBUG=False
+ZOMBOID_ADMIN_PASSWORD=ChangeMePlease
+ZOMBOID_SERVER_NAME=
+ZOMBOID_SERVER_PRESET=
+ZOMBOID_SERVER_PASSWORD=
+ZOMBOID_IP=
+ZOMBOID_STEAM_VAC=True
+ZOMBOID_PORT_1=16261
+ZOMBOID_PORT_2=16262
+ZOMBOID_STEAM_PORT_1=8766
+ZOMBOID_STEAM_PORT_2=8767
+ZOMBOID_RCON_PORT=27015
+ZOMBOID_MEMORY=2048m
+ZOMBOID_MOD_IDS=
+ZOMBOID_WORKSHOP_IDS=
