--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,24 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+#ZOMBOID SERVER
+# Empty Strings are ignored or equivalent to false
+ZOMBOID_NO_STEAM=False
+ZOMBOID_CACHE_DIR=
+ZOMBOID_MOD_FOLDERS=workshop,steam,mods
+ZOMBOID_DEBUG=False
+ZOMBOID_ADMIN_PASSWORD=ChangeMePlease
+ZOMBOID_SERVER_NAME=
+ZOMBOID_SERVER_PRESET=
+ZOMBOID_SERVER_PASSWORD=
+ZOMBOID_IP=
+ZOMBOID_STEAM_VAC=True
+ZOMBOID_PORT_1=16261
+ZOMBOID_PORT_2=16262
+ZOMBOID_STEAM_PORT_1=8766
+ZOMBOID_STEAM_PORT_2=8767
+ZOMBOID_RCON_PORT=27015
+ZOMBOID_MEMORY=2048m
+ZOMBOID_MOD_IDS=
+ZOMBOID_WORKSHOP_IDS=
