feat: add some routes for correct server status monitoring + docker configuration fixes
- create Server model, migration, seeder;
- create event for broadcast server status and server status job for every 5 seconds;
- create middleware for broadcast UpdateStatusEvent;
- update nginx docker configuration for nginx-bridge style

--- a/.env.example
+++ b/.env.example
@@ -83,3 +83,15 @@ ZOMBOID_RCON_PORT=27015
 ZOMBOID_MEMORY=2048m
 ZOMBOID_MOD_IDS=
 ZOMBOID_WORKSHOP_IDS=
+
+REVERB_APP_ID=
+REVERB_APP_KEY=
+REVERB_APP_SECRET=
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
