--- a/docker/nginx/config/sites-enabled/default.conf
+++ b/docker/nginx/config/sites-enabled/default.conf
@@ -29,3 +29,65 @@ server {
 	# additional config
 	include nginxconfig.io/server/general.conf;
 }
+
+server {
+	listen 5173;
+
+	server_name localhost;
+
+	access_log /var/log/nginx/localhost_vite-dev.access.log;
+	error_log /var/log/nginx/localhost_vite-dev.error.log warn;
+
+	location / {
+		proxy_pass http://php-vite-dev:5173;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+	}
+}
+
+server {
+    listen 8080;
+
+	server_name localhost;
+
+	access_log /var/log/nginx/localhost_laravel-reverb.access.log;
+	error_log /var/log/nginx/localhost_laravel-reverb.error.log warn;
+
+    location / {
+        proxy_pass http://php-laravel-reverb:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+}
+
+server {
+    listen 13714;
+
+	server_name localhost;
+
+	access_log /var/log/nginx/localhost_laravel-inertia.access.log;
+	error_log /var/log/nginx/localhost_laravel-inertia.error.log warn;
+
+    location / {
+        proxy_pass http://php-inertia:13714;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+}
