--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,10 +7,15 @@ services:
         ports:
             - "${APP_HTTP:-80}:80"
             - "${APP_HTTPS:-433}:433"
+            - "${VITE_REVERB_PORT:-8080}:8080"
+            - "${VITE_PORT:-5173}:5173"
+            - "${INERTIA_PORT:-13714}:13714"
         networks:
             - backend
         links:
             - fpm
+            - php-laravel-reverb
+            - php-vite-dev
         volumes:
             - ./../:/var/www/html
             - ./nginx/config/nginx.conf:/etc/nginx/nginx.conf:ro
@@ -49,14 +54,39 @@ services:
     php-vite-dev:
         container_name: "${APP_NAME:-pzadmin}_php-vite-dev"
         build: ./php
-        ports:
-            - "5173:5173"
+        networks:
+            - backend
         depends_on:
             - php-setup
         restart: "always"
         entrypoint: [ "bash", "/root/scripts/vite_dev.sh", "-d", "${APP_VITE_DEV}"]
         volumes:
             - ./../:/var/www/html
+
+    php-laravel-reverb:
+        container_name: "${APP_NAME:-pzadmin}_php-laravel-reverb"
+        build: ./php
+        networks:
+            - backend
+        depends_on:
+            - php-setup
+        restart: "always"
+        entrypoint: [ "bash", "/root/scripts/laravel_reverb.sh" ]
+        volumes:
+            - ./../:/var/www/html
+
+    php-inertia:
+        container_name: "${APP_NAME:-pzadmin}_php-inertia"
+        build: ./php
+        networks:
+            - backend
+        depends_on:
+            - php-setup
+        restart: "always"
+        entrypoint: [ "bash", "/root/scripts/inertia.sh" ]
+        volumes:
+            - ./../:/var/www/html
+
 
     zomboid:
         container_name: "${APP_NAME:-pzadmin}_zomboid"
