--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
         "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
+        "unplugin-auto-import": "^0.18.2",
+        "unplugin-vue-components": "^0.27.3",
         "vite": "^5.0",
         "vue": "^3.4.0",
         "vue-tsc": "^2.0.26"
     },
     "dependencies": {
-        "vuex": "^4.1.0"
+        "element-plus": "^2.7.8",
+        "pinia": "^2.2.0"
     }
 }
