--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,15 @@
             "@/*": ["./resources/js/*"],
             "ziggy-js": ["./vendor/tightenco/ziggy"]
         },
+        "types": [
+            "element-plus/global"
+        ]
     },
-    "include": ["resources/js/**/*.ts", "resources/js/**/*.d.ts", "resources/js/**/*.vue"],
+    "include": [
+        "resources/js/**/*.ts",
+        "resources/js/**/*.d.ts",
+        "resources/js/**/*.vue",
+        "node_modules/laravel-echo/typings/index.d.ts",
+        "auto-imports.d.ts"
+    ]
 }
