--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "element-plus": "^2.7.8",
-        "pinia": "^2.2.0"
+        "pinia": "^2.2.0",
+        "pinia-plugin-persistedstate": "^3.2.1"
     }
 }
