feat: huge refactoring
- sepparate api routes: versions, public | private (auth);
- clean up App\Services and create App\Repotiroties;
- set up non-auth redirects;
- front-end refactoring: now server and players store are different.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,7 @@ services:
             - backend
         links:
             - fpm
+            - php-inertia
             - php-laravel-reverb
             - php-vite-dev
         volumes:
