--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "lowel/docker-api-php-sdk": "^1.1",
+        "spatie/laravel-data": "^4.8",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
