feat: basic login authentication using jwt token, artisan commands to generate services and repositories, remove inertia from dependencies (because i hate ziggy routes with their authentifications)
- full working login authentification with a jwt token;
- make:service {name} and make:repository {name} commands ;
- remove all Inertia dependencies because of the auth conflict when i trying to solve non-auth redirects by pages using jwt tokens (i guess ziggy can do it only with a scrf-cookies).

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
             "ziggy-js": ["./vendor/tightenco/ziggy"]
         },
         "types": [
+            "vue-router/dist",
             "element-plus/global"
         ]
     },
