--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.0",
         "laravel/reverb": "@beta",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "lowel/docker-api-php-sdk": "^1.1",
-        "spatie/laravel-data": "^4.8",
-        "tightenco/ziggy": "^2.0"
+        "spatie/laravel-data": "^4.8"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.1",
