--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vue-tsc && vite build && vite build --ssr"
+        "build": "vue-tsc && vite build && vite build"
     },
     "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
-        "@vue/server-renderer": "^3.4.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "laravel-echo": "^1.16.1",
@@ -27,6 +25,7 @@
     "dependencies": {
         "element-plus": "^2.7.8",
         "pinia": "^2.2.0",
-        "pinia-plugin-persistedstate": "^3.2.1"
+        "pinia-plugin-persistedstate": "^3.2.1",
+        "vue-router": "^4.4.3"
     }
 }
