--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "element-plus": "^2.7.8",
         "pinia": "^2.2.0",
         "pinia-plugin-persistedstate": "^3.2.1",
+        "ts-debounce": "^4.0.0",
         "vue-router": "^4.4.3"
     }
 }
