--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,11 @@
         ]
     },
     "include": [
-        "resources/js/**/*.ts",
-        "resources/js/**/*.d.ts",
-        "resources/js/**/*.vue",
-        "node_modules/laravel-echo/typings/index.d.ts",
-        "auto-imports.d.ts"
+      "resources/js/**/*.ts",
+      "resources/js/**/*.d.ts",
+      "resources/js/**/*.vue",
+      "node_modules/laravel-echo/typings/index.d.ts",
+      "auto-imports.d.ts",
+      "node_modules/unplugin-auto-import/auto-imports.d.ts"
     ]
 }
