fix: add correctly .env file for zomboid container

--- a/.env.example
+++ b/.env.example
@@ -70,7 +70,7 @@ ZOMBOID_CACHE_DIR=
 ZOMBOID_MOD_FOLDERS=workshop,steam,mods
 ZOMBOID_DEBUG=False
 ZOMBOID_ADMIN_PASSWORD=ChangeMePlease
-ZOMBOID_SERVER_NAME=
+ZOMBOID_SERVER_NAME=${APP_NAME}
 ZOMBOID_SERVER_PRESET=
 ZOMBOID_SERVER_PASSWORD=
 ZOMBOID_IP=
