--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -80,10 +80,12 @@ services:
         restart: unless-stopped
         build: ./zomboid
         env_file:
-            - .env
+            - ./../.env
         ports:
             - "${ZOMBOID_PORT_1}:16261/udp"
             - "${ZOMBOID_PORT_2}:16262/udp"
+            - "${ZOMBOID_STEAM_PORT_1}:8766"
+            - "${ZOMBOID_STEAM_PORT_2}:8767"
             - "${ZOMBOID_RCON_PORT}:27015"
         volumes:
             # Server data
