refactor: refactoring + optimize servers fetch in ServerStatus component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
             "ziggy-js": ["./vendor/tightenco/ziggy"]
         },
         "types": [
-            "vue-router/dist",
+            "vue-router",
             "element-plus/global"
         ]
     },
