--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "3"
-
 services:
     nginx:
+        env_file:
+            - ./../.env
         container_name: "${APP_NAME:-pzadmin}_nginx"
         build: ./nginx
         ports:
@@ -25,6 +25,8 @@ services:
             - ./nginx/config/nginxconfig.io/:/etc/nginx/nginxconfig.io/
 
     fpm:
+        env_file:
+            - ./../.env
         container_name: "${APP_NAME:-pzadmin}_fpm"
         build: ./fpm
         networks:
@@ -36,6 +38,8 @@ services:
             - ./fpm/config/www.conf:/usr/local/etc/php-fom.d/www.conf
 
     php:
+        env_file:
+            - ./../.env
         container_name: "${APP_NAME:-pzadmin}_php"
         build: ./php
         volumes:
